--- a/web/src/pages/ccbz.modules.css
+++ b/web/src/pages/ccbz.modules.css
@@ -69,3 +69,9 @@ body {
     margin-top: 10px;
     text-align: right;
 }
+
+@media print {
+    body {
+        print-color-adjust: exact;
+    }
+}
