--- a/web/src/pages/clf.modules.css
+++ b/web/src/pages/clf.modules.css
@@ -100,3 +100,9 @@ body {
     text-align: center;
     vertical-align: top;
 }
+
+@media print {
+    body {
+        print-color-adjust: exact;
+    }
+}
