--- a/web/src/pages/clf.modules.css
+++ b/web/src/pages/clf.modules.css
@@ -29,7 +29,8 @@ body {
     font-size: 14px;
 }
 
-.mtable th, .mtable td {
+.mtable th,
+.mtable td {
     border: 1px solid black;
     padding: 8px;
     text-align: center;
@@ -74,13 +75,13 @@ body {
     font-weight: bold;
 }
 
-.foot_content{
+.foot_content {
     right: 50px;
     width: 70vw;
     height: 100px;
 }
 
-.left_content{
+.left_content {
     position: absolute;
     top: 200px;
     right: -5px;
@@ -101,8 +102,20 @@ body {
     vertical-align: top;
 }
 
+@page {
+    size: landscape;
+    /* 横向 */
+    margin: 0;
+    /* 最小化页边距（但无法完全消除页眉页脚） */
+}
+
 @media print {
+
     body {
         print-color-adjust: exact;
+    }
+
+    .print_hidden {
+        display: none !important;
     }
 }
