--- a/web/src/pages/pz.modules.css
+++ b/web/src/pages/pz.modules.css
@@ -50,6 +50,7 @@ body {
     justify-content: space-between;
     padding-top: 20px;
     margin-top: 20px;
+    margin-right: 200px;
 }
 
 .footer_item {
@@ -69,8 +70,20 @@ body {
     margin: 0 auto;
 }
 
+@page {
+    size: landscape;
+    /* 横向 */
+    margin: 0;
+    /* 最小化页边距（但无法完全消除页眉页脚） */
+}
+
 @media print {
+
     body {
         print-color-adjust: exact;
+    }
+
+    .print_hidden {
+        display: none !important;
     }
 }
